--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@ body {
 .forecats-container {
   font-family: 'Roboto', sans-serif;
   background-color: #03A9F4;
+  margin-top: 7rem;
   height: 10rem;
   font-weight: bold;
 }
@@ -33,4 +34,29 @@ h1 ,h2, h3, h4 {
   -webkit-box-shadow: 0px 0px 5px 0px rgba(3,169,244,0.59);
   -moz-box-shadow: 0px 0px 5px 0px rgba(3,169,244,0.59);
   box-shadow: 0px 0px 5px 0px rgba(3,169,244,0.59);
+}
+
+@media (max-width: 64em) {
+  .forecats-container {
+    font-family: 'Roboto', sans-serif;
+    background-color: #03A9F4;
+    height: 10rem;
+    font-weight: bold;
+    margin-top: 3.5rem;
+    padding-top: 1rem;
+    padding-left: 3rem;
+  }
+ 
+  .height-content-card-forecas {
+    height: 100%;
+    margin: -.5rem;
+  }
+
+  .card-forecast {    
+    padding: 1rem;
+    width: 100%;
+    display: table;
+    margin-bottom: 1rem;
+  }
+  
 }
